travail du 13 sept

--- a/acuiel.html
+++ b/acuiel.html
@@ -86,37 +86,90 @@
     <a href="categoriesCours.html" class="btn-primary">Voir tout le catalogue</a>
   </section>
 
-  <!-- TESTIMONIALS -->
-  <section class="testimonials">
-    <h2>Ce que nos clients disent</h2>
-    <div class="cards">
-      <blockquote>“IAcademy a transformé notre approche…”<br><cite>- Sophie Dubois</cite></blockquote>
-      <blockquote>“Les experts sont exceptionnels…”<br><cite>- Marc Lefevre</cite></blockquote>
-      <blockquote>“Une plateforme complète…”<br><cite>- Chloé Martin</cite></blockquote>
+ <!-- TESTIMONIALS -->
+<section class="testimonials">
+  <h2>Ce que nos clients disent</h2>
+  <div class="testimonial-cards">
+
+    <div class="testimonial-card">
+      <p class="testimonial-text">
+        "IAcademy a transformé notre approche de l'IA. Le diagnostic a été précis et les formations très pertinentes pour nos équipes."
+      </p>
+      <div class="testimonial-author">
+        <img src="image/sophie dubois.jpeg" alt="Sophie Dubois">
+        <div>
+          <h4>Sophie Dubois</h4>
+          <p>Directrice de l'Innovation, TechCorp</p>
+        </div>
+      </div>
     </div>
-  </section>
+
+    <div class="testimonial-card">
+      <p class="testimonial-text">
+        "Les experts sont exceptionnels. Leurs conseils ont été cruciaux pour le déploiement de notre projet IA dans les délais et le budget."
+      </p>
+      <div class="testimonial-author">
+        <img src="image/marc lefevre.jpg" alt="Marc Lefevre">
+        <div>
+          <h4>Marc Lefevre</h4>
+          <p>CTO, Global Solutions</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="testimonial-card">
+      <p class="testimonial-text">
+        "Une plateforme complète pour se former et se tenir informé des dernières avancées. Indispensable pour tout professionnel de l'IA."
+      </p>
+      <div class="testimonial-author">
+        <img src="image/chloe martin.jpg" alt="Chloé Martin">
+        <div>
+          <h4>Chloé Martin</h4>
+          <p>Data Scientist, DataForge</p>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</section>
+
 
   <!-- NEWS -->
- <section class="news">
+<section class="news">
   <h2>Actualités IA</h2>
   <div class="cards">
     <div class="news-item">
-      <img src="image/image1.png" alt="IA Générative">
-      <h3>L’IA Générative Révolutionne la Création de Contenu</h3>
-      <p>Lire plus</p>
+      <img src="image/creation contenueg" alt="IA Générative">
+      <div class="news-content">
+        <h3>L’IA Générative Révolutionne la Création de Contenu</h3>
+        <p>Découvrez comment les modèles d'IA générative transforment l'industrie créative, de la rédaction à l'art visuel.</p>
+        <span class="date">10 Mars 2024</span>
+        <a href="#">Lire plus</a>
+      </div>
     </div>
+
     <div class="news-item">
-      <img src="image/heureuse-femme-d-affaires-avec-bulle-de-dialogue.jpg" alt="IA Éthique">
-      <h3>Les Dernières Avancées en IA Éthique</h3>
-      <p>Lire plus</p>
+      <img src="image/avancé ethique.jpeg" alt="IA Éthique">
+      <div class="news-content">
+        <h3>Les Dernières Avancées en IA Éthique</h3>
+        <p>Un tour d'horizon des innovations visant à rendre l'intelligence artificielle plus juste et transparente pour tous.</p>
+        <span class="date">05 Mars 2024</span>
+        <a href="#">Lire plus</a>
+      </div>
     </div>
+
     <div class="news-item">
-      <img src="image/equipe-commerciale-multiethnique-discutant-du-projet.jpg" alt="IA et emploi">
-      <h3>Impact de l’IA sur l’Emploi</h3>
-      <p>Lire plus</p>
+      <img src="image/impact emploi.jpeg" alt="IA et emploi">
+      <div class="news-content">
+        <h3>Impact de l’IA sur l’Emploi : Tendances et Perspectives</h3>
+        <p>Analyse des effets de l'IA sur le marché du travail et les compétences nécessaires pour l'avenir.</p>
+        <span class="date">28 Février 2024</span>
+        <a href="#">Lire plus</a>
+      </div>
     </div>
   </div>
 </section>
+
 
   <!-- EXPERTS -->
   <section class="experts">
@@ -138,14 +191,14 @@
     </div>
 
     <div class="expert">
-      <img src="image/portrait5.jpg" alt="Photo de Mme. Léa Dupont">
+      <img src="image/lea dupont" alt="Photo de Mme. Léa Dupont">
       <h3>Mme. Léa Dupont</h3>
       <p>Vision & Robotique</p>
       <a href="#">Voir le profil</a>
     </div>
 
     <div class="expert">
-      <img src="david-roy.jpg" alt="Photo de M. David Roy">
+      <img src="image/david roy" alt="Photo de M. David Roy">
       <h3>M. David Roy</h3>
       <p>NLP & Chatbots</p>
       <a href="#">Voir le profil</a>
