--- a/espaceCommunautaire.html
+++ b/espaceCommunautaire.html
@@ -1,100 +1,165 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Espace Communautaire - IAcademy</title>
-  <link rel="stylesheet" href="espaceCommunautaire.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>IAcademy - Espace Communautaire</title>
+    <link rel="stylesheet" href="espaceCommunautaire.css">
 </head>
 <body>
+    <!-- Header -->
+    <header class="header">
+        <nav class="navbar">
+            <div class="logo">
+                <span class="logo-icon">✱</span>
+                <span class="logo-text">IAcademy</span>
+            </div>
+            <ul class="nav-menu">
+                <li><a href="#" class="nav-link">Accueil</a></li>
+                <li><a href="#" class="nav-link">Catalogue de cours</a></li>
+                <li><a href="#" class="nav-link">Diagnostic IA</a></li>
+                <li><a href="#" class="nav-link">Experts IA</a></li>
+                <li><a href="#" class="nav-link active">Communauté</a></li>
+            </ul>
+            <div class="header-right">
+                <input type="text" class="search-input" placeholder="Rechercher cours, experts...">
+                <div class="header-icons">
+                    <span class="icon">🔔</span>
+                    <span class="icon">💬</span>
+                    <span class="icon">👤</span>
+                    <div class="profile-avatar"></div>
+                </div>
+            </div>
+        </nav>
+    </header>
 
-  <!-- Header -->
-  <header>
-    <div class="logo">IAcademy</div>
-    <nav>
-      <ul>
-       <a href="acuiel.html">Accueil</a>
-      <a href="categoriesCours.html">Catalogue de Cours</a>
-      <a href="diagnostic.html">Diagnostic IA</a>
-      <a href="expert.html">Experts IA</a>
-      <a href="espaceCommunautaire.html">Communauté</a>
-      </ul>
-    </nav>
-    <input type="text" class="searchbar" placeholder="Rechercher cours, experts...">
-  </header>
+    <main class="main-container">
+        <!-- Page Title -->
+        <section class="page-header">
+            <h1>Espace Communautaire</h1>
+            <p>Connectez-vous avec d'autres passionnés d'IA, partagez vos connaissances, participez à des défis et progressez ensemble.</p>
+        </section>
 
-  <!-- Main -->
-  <div class="container">
-    <!-- Left content -->
-    <div class="main-content">
-      <h1>Espace Communautaire</h1>
-      <p class="subtitle">Connectez-vous avec d’autres passionnés d’IA, partagez vos connaissances, participez à des défis et progressez ensemble.</p>
-      
-      <div class="discussion-header">
-        <h2>Discussions Thématiques</h2>
-        <button class="btn">Créer un nouveau sujet</button>
-      </div>
+        <div class="content-wrapper">
+            <!-- Left Content -->
+            <div class="left-content">
+                <div class="section-header">
+                    <h2>Discussions Thématiques</h2>
+                    <button class="create-btn">Créer un nouveau sujet</button>
+                </div>
 
-      <div class="discussion-card">
-        <span class="tag">Deep Learning</span>
-        <h3>Meilleures pratiques pour le déploiement de modèles LLM</h3>
-        <p>Discussion des stratégies efficaces pour déployer des modèles de langage à grande échelle en production, incluant l’optimisation et la surveillance.</p>
-        <div class="discussion-footer">
-          <span>42 réponses</span>
-          <button class="btn">Voir le sujet</button>
+                <!-- Discussion Topics -->
+                <div class="discussion-card">
+                    <h3>Meilleures pratiques pour le déploiement de modèles LLM</h3>
+                    <span class="topic-tag">Deep Learning</span>
+                    <p>Discutons des stratégies efficaces pour déployer des modèles de langage à grande échelle en production, incluant l'optimisation et la surveillance.</p>
+                    <div class="card-footer">
+                        <span class="responses">💬 42 réponses</span>
+                        <a href="#" class="view-link">Voir le sujet</a>
+                    </div>
+                </div>
+
+                <div class="discussion-card">
+                    <h3>Comprendre l'IA Éthique dans les applications médicales</h3>
+                    <span class="topic-tag ethics">IA Éthique</span>
+                    <p>Un débat sur les implications éthiques de l'IA dans le secteur de la santé : biais, confidentialité des données et responsabilité.</p>
+                    <div class="card-footer">
+                        <span class="responses">💬 28 réponses</span>
+                        <a href="#" class="view-link">Voir le sujet</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Right Sidebar -->
+            <div class="sidebar">
+                <!-- Contributors Ranking -->
+                <div class="sidebar-section">
+                    <h3>Classement des contributeurs</h3>
+                    <div class="contributor-list">
+                        <div class="contributor-item">
+                            <div class="rank">1.</div>
+                            <div class="avatar"></div>
+                            <div class="contributor-info">
+                                <div class="name">Dr. Émilie Dubois</div>
+                                <div class="points">1540 points</div>
+                            </div>
+                        </div>
+                        <div class="contributor-item">
+                            <div class="rank">2.</div>
+                            <div class="avatar"></div>
+                            <div class="contributor-info">
+                                <div class="name">M. Jean Lefevre</div>
+                                <div class="points">1280 points</div>
+                            </div>
+                        </div>
+                        <div class="contributor-item">
+                            <div class="rank">3.</div>
+                            <div class="avatar"></div>
+                            <div class="contributor-info">
+                                <div class="name">Mme. Sarah Chen</div>
+                                <div class="points">950 points</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Community Badges -->
+                <div class="sidebar-section">
+                    <h3>Badges communautaires</h3>
+                    <div class="badges-grid">
+                        <div class="badge-item">
+                            <div class="badge-icon">👤</div>
+                            <div class="badge-name">Maître du Débat</div>
+                        </div>
+                        <div class="badge-item">
+                            <div class="badge-icon">⚡</div>
+                            <div class="badge-name">Résolveur de Problèmes</div>
+                        </div>
+                        <div class="badge-item">
+                            <div class="badge-icon">🔍</div>
+                            <div class="badge-name">Explorateur IA</div>
+                        </div>
+                        <div class="badge-item">
+                            <div class="badge-icon">🎓</div>
+                            <div class="badge-name">Mentor Communautaire</div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Upcoming Events -->
+                <div class="sidebar-section">
+                    <h3>Événements à venir</h3>
+                    <div class="event-item">
+                        <h4>Hackathon IA : Solutions pour le climat</h4>
+                        <div class="event-date">📅 15-17 Novembre 2024</div>
+                        <a href="#" class="event-link">Voir les détails</a>
+                    </div>
+                    <div class="event-item">
+                        <h4>Défi : Détection d'anomalies industrielles</h4>
+                        <div class="event-date">📅 1er - 30 Octobre 2024</div>
+                        <a href="#" class="event-link">Voir les détails</a>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
+    </main>
 
-      <div class="discussion-card">
-        <span class="tag green">IA Éthique</span>
-        <h3>Comprendre l’IA Éthique dans les applications médicales</h3>
-        <p>Un débat sur les implications éthiques de l’IA dans le secteur de la santé : biais, confidentialité des données et responsabilité.</p>
-      </div>
-    </div>
-
-    <!-- Sidebar -->
-    <div class="sidebar">
-      <div class="sidebar-section">
-        <h3>Classement des contributeurs</h3>
-        <ul class="ranking-list">
-          <li>1. Dr. Émilie Dubois – 1540 points</li>
-          <li>2. M. Jean Lefevre – 1280 points</li>
-          <li>3. Mme. Sarah Chen – 950 points</li>
-        </ul>
-      </div>
-
-      <div class="sidebar-section">
-        <h3>Badges communautaires</h3>
-        <div class="badges">
-          <div class="badge">Maître du Débat</div>
-          <div class="badge">Résolveur de Problèmes</div>
-          <div class="badge">Explorateur IA</div>
-          <div class="badge">Mentor Communautaire</div>
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer-links">
+            <a href="#">À propos d'IAcad</a>
+            <a href="#">Ressources</a>
+            <a href="#">Légal</a>
         </div>
-      </div>
-
-      <div class="sidebar-section">
-        <h3>Événements à venir</h3>
-        <ul class="events">
-          <li>
-            Hackathon IA : Solutions pour le climat<br>
-            <small>15-17 Novembre 2024</small><br>
-            <a href="#">Voir les détails</a>
-          </li>
-          <li>
-            Défi : Détection d’anomalies industrielles<br>
-            <small>1er - 30 Octobre 2024</small><br>
-            <a href="#">Voir les détails</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
-
-  <!-- Footer -->
-  <footer>
-    © 2024 IAcademy - À propos · Ressources · Légal
-  </footer>
-
+        <div class="social-links">
+            <span>📘</span>
+            <span>🐦</span>
+            <span>💼</span>
+            <span>📱</span>
+        </div>
+        <div class="footer-brand">
+            <span>Made with ❤️</span>
+        </div>
+    </footer>
 </body>
 </html>
