--- a/expert.html
+++ b/expert.html
@@ -1,109 +1,170 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Profil Expert IA</title>
-  <link rel="stylesheet" href="expert.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Profil Expert IA - Dr. Élodie Dubois</title>
+    <link rel="stylesheet" href="expert.css">
 </head>
 <body>
+    <!-- Header -->
+    <header class="header">
+        <nav class="navbar">
+            <div class="logo">
+                <span class="logo-icon">✱</span>
+                <span class="logo-text">IAcademy</span>
+            </div>
+            <ul class="nav-menu">
+                <li><a href="#" class="nav-link">Accueil</a></li>
+                <li><a href="#" class="nav-link">Catalogue de Cours</a></li>
+                <li><a href="#" class="nav-link">Diagnostic IA</a></li>
+                <li><a href="#" class="nav-link active">Experts IA</a></li>
+                <li><a href="#" class="nav-link">Communauté</a></li>
+            </ul>
+            <div class="header-right">
+                <input type="text" class="search-input" placeholder="Rechercher des cours, des experts...">
+                <span class="connection-link">🔗 Connexion / Inscription</span>
+            </div>
+        </nav>
+    </header>
 
-  <!-- Header -->
-  <header>
-    <div class="logo"><strong>IAcademy</strong></div>
-    <nav>
-    <a href="acuiel.html">Accueil</a>
-      <a href="categoriesCours.html">Catalogue de Cours</a>
-      <a href="diagnostic.html">Diagnostic IA</a>
-      <a href="expert.html">Experts IA</a>
-      <a href="espaceCommunautaire.html">Communauté</a>
-    </nav>
-    <a href="#" class="login">Connexion / Inscription</a>
-  </header>
-
-  <!-- Contenu principal -->
-  <main class="container">
-    <!-- Carte Profil -->
-    <div class="card profile">
-      <img src="https://via.placeholder.com/120" alt="Dr. Élodie Dubois">
-      <h2>Dr. Élodie Dubois</h2>
-      <p>Architecte IA & Spécialiste en Deep Learning</p>
-      <div class="rating">⭐ 4.8 / 5 (75 avis)</div>
-      <a href="#" class="btn">Réserver une session</a>
-      <a href="#" class="btn btn-secondary">Proposer une mission</a>
-    </div>
-
-    <!-- Infos Expert -->
-    <div>
-      <div class="card section">
-        <h3>À propos</h3>
-        <p>Dr. Dubois est une figure de proue dans le domaine de l’intelligence artificielle, 
-        avec plus de 10 ans d’expérience dans la conception et le déploiement de solutions 
-        d’apprentissage profond pour les secteurs de la santé et de la finance. Passionnée 
-        par l’innovation éthique en IA, elle aide les entreprises à transformer leurs défis en opportunités stratégiques.</p>
-      </div>
-
-      <div class="card section">
-        <h3>Spécialités</h3>
-        <div class="tags">
-          <span>Deep Learning</span>
-          <span>Traitement du Langage Naturel (TLN)</span>
-          <span>Vision par Ordinateur</span>
-          <span>IA Éthique</span>
-          <span>Stratégie d’IA</span>
-          <span>Santé IA</span>
-          <span>FinTech</span>
+    <main class="main-container">
+        <!-- Page Title -->
+        <div class="page-title">
+            <h1>Profil Expert IA</h1>
         </div>
-      </div>
 
-      <div class="card section">
-        <h3>Expérience Professionnelle</h3>
-        <div class="job">
-          <h4>Scientifique en Chef en IA</h4>
-          <p>InnovAI Tech Solutions</p>
-          <p>2018 - Présent</p>
+        <div class="content-wrapper">
+            <!-- Left Profile Card -->
+            <div class="profile-card">
+                <div class="profile-image">
+                    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='120' height='120' viewBox='0 0 120 120'%3E%3Ccircle cx='60' cy='60' r='60' fill='%23ddd'/%3E%3Ccircle cx='60' cy='45' r='20' fill='%23999'/%3E%3Cpath d='M20 100 Q60 80 100 100' fill='%23999'/%3E%3C/svg%3E" alt="Dr. Élodie Dubois">
+                </div>
+                <h2 class="profile-name">Dr. Élodie Dubois</h2>
+                <p class="profile-title">Architecte IA & Spécialiste en Deep Learning</p>
+                
+                <div class="rating">
+                    <div class="stars">
+                        <span class="star">⭐</span>
+                        <span class="star">⭐</span>
+                        <span class="star">⭐</span>
+                        <span class="star">⭐</span>
+                        <span class="star empty">⭐</span>
+                    </div>
+                    <span class="rating-text">(4.8 / 5, 75 avis)</span>
+                </div>
+
+                <div class="action-buttons">
+                    <button class="btn-primary">Réserver une session</button>
+                    <button class="btn-secondary">Proposer une mission</button>
+                </div>
+            </div>
+
+            <!-- Right Content -->
+            <div class="profile-content">
+                <!-- About Section -->
+                <section class="content-section">
+                    <h3>À propos</h3>
+                    <p>Dr. Dubois est une figure de proue dans le domaine de l'intelligence artificielle, avec plus de 10 années d'expérience dans la conception et le déploiement de solutions d'apprentissage profond pour les secteurs de la santé et de la finance. Passionnée par l'éthique en IA, elle aide les entreprises à transformer leurs défis en opportunités stratégiques.</p>
+                </section>
+
+                <!-- Specialities Section -->
+                <section class="content-section">
+                    <h3>Spécialités</h3>
+                    <div class="tags-container">
+                        <span class="tag">Deep Learning</span>
+                        <span class="tag">Traitement du Langage Naturel (TLN)</span>
+                        <span class="tag">Vision par Ordinateur</span>
+                        <span class="tag">IA Éthique</span>
+                        <span class="tag">Stratégie d'IA</span>
+                        <span class="tag">Santé IA</span>
+                        <span class="tag">FinTech</span>
+                    </div>
+                </section>
+
+                <!-- Professional Experience -->
+                <section class="content-section">
+                    <h3>Expérience Professionnelle</h3>
+                    <div class="experience-item">
+                        <div class="experience-icon">🏢</div>
+                        <div class="experience-details">
+                            <h4>Scientifique en Chef en IA</h4>
+                            <p class="company">InnovAI Tech Solutions</p>
+                            <p class="period">2018 - Présent</p>
+                        </div>
+                    </div>
+                    <div class="experience-item">
+                        <div class="experience-icon">🏢</div>
+                        <div class="experience-details">
+                            <h4>Chercheuse en IA</h4>
+                            <p class="company">Institut de Recherche Avancée en IA</p>
+                            <p class="period">2012 - 2018</p>
+                        </div>
+                    </div>
+                </section>
+
+                <!-- Education -->
+                <section class="content-section">
+                    <h3>Éducation</h3>
+                    <div class="education-item">
+                        <div class="education-icon">🎓</div>
+                        <div class="education-details">
+                            <h4>Ph.D. en Intelligence Artificielle</h4>
+                            <p class="institution">Université Paris-Saclay</p>
+                            <p class="year">2012</p>
+                        </div>
+                    </div>
+                    <div class="education-item">
+                        <div class="education-icon">🎓</div>
+                        <div class="education-details">
+                            <h4>M.Sc. en Informatique</h4>
+                            <p class="institution">École Normale Supérieure</p>
+                            <p class="year">2009</p>
+                        </div>
+                    </div>
+                </section>
+
+                <!-- Pricing -->
+                <section class="content-section">
+                    <h3>Tarifs & Disponibilité</h3>
+                    <p>Tarifs personnalisés basés sur la portée du projet. Sessions de consultation disponibles à partir de 250€/heure.</p>
+                    <p class="price-highlight">À partir de 250€ / heure</p>
+                </section>
+
+                <!-- Testimonials -->
+                <section class="content-section">
+                    <h3>Témoignages</h3>
+                    <div class="testimonial">
+                        <p class="testimonial-text">"L'expertise du Dr. Dubois a été essentielle pour le succès de notre projet de diagnostic médical basé sur l'IA. Son approche méthodique et sa vision stratégique sont inégalées."</p>
+                        <p class="testimonial-author">- Marie Lefevre, Directrice R&D, BioMed Innovations</p>
+                    </div>
+                    <div class="testimonial">
+                        <p class="testimonial-text">"Une professionnelle exceptionnelle qui a su démystifier l'IA pour notre équipe et nous guider vers des solutions concrètes et impactantes."</p>
+                        <p class="testimonial-author">- Jean Dupont, CEO, Financial Solutions</p>
+                    </div>
+                </section>
+            </div>
         </div>
-        <div class="job">
-          <h4>Chercheuse en IA</h4>
-          <p>Institut de Recherche Avancée en IA</p>
-          <p>2012 - 2018</p>
+    </main>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer-content">
+            <div class="footer-links">
+                <a href="#">À propos d'IAcad</a>
+                <a href="#">Ressources</a>
+                <a href="#">Légal</a>
+            </div>
+            <div class="social-links">
+                <span>📘</span>
+                <span>🐦</span>
+                <span>💼</span>
+                <span>📱</span>
+            </div>
         </div>
-      </div>
-
-      <div class="card section">
-        <h3>Éducation</h3>
-        <div class="edu">
-          <h4>Ph.D. en Intelligence Artificielle</h4>
-          <p>Université Paris-Saclay — 2012</p>
+        <div class="footer-brand">
+            <span>Made with ❤️ Visily</span>
         </div>
-        <div class="edu">
-          <h4>M.Sc. en Informatique</h4>
-          <p>École Normale Supérieure — 2009</p>
-        </div>
-      </div>
-
-      <div class="card section">
-        <h3>Tarifs & Disponibilité</h3>
-        <p class="tarif">Tarifs personnalisés basés sur la portée du projet. Sessions de consultation disponibles à partir de <a href="#">250€ / heure</a>.</p>
-      </div>
-
-      <div class="card section">
-        <h3>Témoignages</h3>
-        <blockquote>
-          "L’expertise du Dr. Dubois a été essentielle pour le succès de notre projet de diagnostic médical basé sur l’IA. Son approche méthodique et sa vision stratégique sont inégalées."  
-          <br>– Marie Lefevre, Directrice R&D, BioMed Innovations
-        </blockquote>
-        <blockquote>
-          "Une professionnelle exceptionnelle qui a su démystifier l’IA pour notre équipe et nous guider vers des solutions concrètes et impactantes."  
-          <br>– Jean Dupont, CEO, FinancIA Solutions
-        </blockquote>
-      </div>
-    </div>
-  </main>
-
-  <!-- Footer -->
-  <footer>
-    © 2025 IAcademy — Tous droits réservés
-  </footer>
+    </footer>
 </body>
 </html>
