travail du 13 sept

--- a/listExpert.html
+++ b/listExpert.html
@@ -54,7 +54,7 @@
             <!-- Expert 1 -->
             <div class="expert-card">
                 <div class="expert-image">
-                    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='80' height='80' viewBox='0 0 80 80'%3E%3Ccircle cx='40' cy='40' r='40' fill='%23ddd'/%3E%3Ccircle cx='40' cy='32' r='12' fill='%23999'/%3E%3Cpath d='M15 65 Q40 55 65 65' fill='%23999'/%3E%3C/svg%3E" alt="Dr. Élodie Dubois">
+                    <img src="image/elodie_ubois.jpg" alt="Dr. Élodie Dubois">
                 </div>
                 <div class="expert-info">
                     <h3 class="expert-name">Dr. Élodie Dubois</h3>
@@ -82,7 +82,7 @@
             <!-- Expert 2 -->
             <div class="expert-card">
                 <div class="expert-image">
-                    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='80' height='80' viewBox='0 0 80 80'%3E%3Ccircle cx='40' cy='40' r='40' fill='%23ddd'/%3E%3Ccircle cx='40' cy='32' r='12' fill='%23999'/%3E%3Cpath d='M15 65 Q40 55 65 65' fill='%23999'/%3E%3C/svg%3E" alt="Prof. Marc Laurent">
+                    <img src="image/marc_laurent.jpg" alt="Prof. Marc Laurent">
                 </div>
                 <div class="expert-info">
                     <h3 class="expert-name">Prof. Marc Laurent</h3>
@@ -110,7 +110,7 @@
             <!-- Expert 3 -->
             <div class="expert-card">
                 <div class="expert-image">
-                    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='80' height='80' viewBox='0 0 80 80'%3E%3Ccircle cx='40' cy='40' r='40' fill='%23ddd'/%3E%3Ccircle cx='40' cy='32' r='12' fill='%23999'/%3E%3Cpath d='M15 65 Q40 55 65 65' fill='%23999'/%3E%3C/svg%3E" alt="Dr. Sarah Chen">
+                    <img src="image/sarah.jpg" alt="Dr. Sarah Chen">
                 </div>
                 <div class="expert-info">
                     <h3 class="expert-name">Dr. Sarah Chen</h3>
@@ -138,7 +138,7 @@
             <!-- Expert 4 -->
             <div class="expert-card">
                 <div class="expert-image">
-                    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='80' height='80' viewBox='0 0 80 80'%3E%3Ccircle cx='40' cy='40' r='40' fill='%23ddd'/%3E%3Ccircle cx='40' cy='32' r='12' fill='%23999'/%3E%3Cpath d='M15 65 Q40 55 65 65' fill='%23999'/%3E%3C/svg%3E" alt="Dr. Ahmed Khalil">
+                    <img src="image/ahmed.jpg" alt="Dr. Ahmed Khalil">
                 </div>
                 <div class="expert-info">
                     <h3 class="expert-name">Dr. Ahmed Khalil</h3>
@@ -166,7 +166,7 @@
             <!-- Expert 5 -->
             <div class="expert-card">
                 <div class="expert-image">
-                    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='80' height='80' viewBox='0 0 80 80'%3E%3Ccircle cx='40' cy='40' r='40' fill='%23ddd'/%3E%3Ccircle cx='40' cy='32' r='12' fill='%23999'/%3E%3Cpath d='M15 65 Q40 55 65 65' fill='%23999'/%3E%3C/svg%3E" alt="Dr. Lisa Rodriguez">
+                    <img src="image/lisa.jpg" alt="Dr. Lisa Rodriguez">
                 </div>
                 <div class="expert-info">
                     <h3 class="expert-name">Dr. Lisa Rodriguez</h3>
@@ -194,7 +194,7 @@
             <!-- Expert 6 -->
             <div class="expert-card">
                 <div class="expert-image">
-                    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='80' height='80' viewBox='0 0 80 80'%3E%3Ccircle cx='40' cy='40' r='40' fill='%23ddd'/%3E%3Ccircle cx='40' cy='32' r='12' fill='%23999'/%3E%3Cpath d='M15 65 Q40 55 65 65' fill='%23999'/%3E%3C/svg%3E" alt="Prof. Jean-Pierre Martin">
+                    <img src="image/jean_pierre.jpg" alt="Prof. Jean-Pierre Martin">
                 </div>
                 <div class="expert-info">
                     <h3 class="expert-name">Prof. Jean-Pierre Martin</h3>
