--- a/expert.html
+++ b/expert.html
@@ -38,7 +38,7 @@
             <!-- Left Profile Card -->
             <div class="profile-card">
                 <div class="profile-image">
-                    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='120' height='120' viewBox='0 0 120 120'%3E%3Ccircle cx='60' cy='60' r='60' fill='%23ddd'/%3E%3Ccircle cx='60' cy='45' r='20' fill='%23999'/%3E%3Cpath d='M20 100 Q60 80 100 100' fill='%23999'/%3E%3C/svg%3E" alt="Dr. Élodie Dubois">
+                    <img src="image/elodie_ubois.jpg" alt="Dr. Élodie Dubois">
                 </div>
                 <h2 class="profile-name">Dr. Élodie Dubois</h2>
                 <p class="profile-title">Architecte IA & Spécialiste en Deep Learning</p>
